--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -29,7 +29,7 @@ ul{
 }
 
 .button_1 {
-	height: 35px;
+	height: 25px;
 	padding-left: 10px;
 	padding-right: 10px;
 	background: #4997D0;
@@ -43,7 +43,7 @@ ul{
 }
 
 .button_2 {
-	height: 35px;
+	height: 25px;
 	padding-left: 10px;
 	padding-right: 10px;
 	background: #4997D0;
@@ -59,7 +59,7 @@ ul{
 }
 
 .button_3 {
-	height: 35px;
+	height: 25px;
 	padding-left: 10px;
 	padding-right: 10px;
 	margin-bottom: 10px;
@@ -297,6 +297,8 @@ select {
 }
 
 
+
+
 /* allentries */
 ul#entries li{
 	list-style: none;
@@ -312,12 +314,18 @@ ul#entries li:last-child {
 	margin-bottom: 20px;
 }
 
+.allentry {
+	width:60%;
+	margin:30px auto;
+	/*background: #e4e4e4;*/
+	border-radius: 5px;
+	border: 2px solid #fff;
+}
 
 
-
-/*.search-container{
-	float: right;
-}*/
+.search-container{
+	display: inline;
+}
 
 .search-input{
 	width: 70%;
@@ -325,6 +333,7 @@ ul#entries li:last-child {
   	margin-top: 8px;
   	font-size: 17px;
   	border: none;
+  	background-color: #e4e4e4;
 }
 
 .search-container button {
@@ -347,14 +356,20 @@ ul#entries li:last-child {
 	float: right;
 }
 
+.next-button {
+	float: right;
+}
+
 .delete-button{
 	float: right;
-	background: #4997D0;
+	background: #c2c2c2;
+	margin-left: 3px;
+	margin-right: 3px;
 }
 
 .delete-button:hover{
 	background: #ff0800;
-
+}
 
 /* media queries */
 
