--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -235,6 +235,9 @@ form {
 	margin: 0px auto;
 	margin-top: 20px;
 	padding-left: 10px;
+	border: 1px solid #b4b4b4;
+	border-radius: 7px;
+	background: #d7d7d7;
 }
 
 .form-element{
