--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -3,6 +3,8 @@ body {
 	padding: 0;
 	margin: 0;
 	background-color: #f4f4f4;
+	height: 100%;
+	min-height: 100%;
 }
 
 /* Globals */
@@ -10,6 +12,7 @@ body {
 	width: 60%;
 	margin: auto;
 	overflow: hidden;
+	min-height: 100%;
 }
 
 .form-container {
@@ -217,9 +220,13 @@ header a:hover {
 footer {
 	padding: 20px;
 	margin-top: 20px;
+	width: 97%;
 	color: #ffffff;
 	background-color: #4997D0; 
 	text-align: center;
+	bottom: 0;
+	clear: both;
+  position: absolute;
 }
 
 
