--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -4,7 +4,6 @@ body {
 	margin: 0;
 	background-color: #f4f4f4;
 	height: 100%;
-	min-height: 100%;
 }
 
 /* Globals */
@@ -218,15 +217,15 @@ header a:hover {
 
 /* footer */
 footer {
-	padding: 20px;
+	padding: 10px;
 	margin-top: 20px;
-	width: 97%;
+	width: 99%;
 	color: #ffffff;
 	background-color: #4997D0; 
 	text-align: center;
 	bottom: 0;
 	clear: both;
-  position: absolute;
+  position: fixed;
 }
 
 
@@ -392,9 +391,19 @@ ul#entries li:last-child {
 		text-align: center;
 		width: 100%;
 	}
-
 	header{
 		padding-bottom: 20px;
+	}
+	footer {
+		padding: 10px;
+		margin-top: 20px;
+		width: 99%;
+		color: #ffffff;
+		background-color: #4997D0; 
+		text-align: center;
+		bottom: 0;
+		clear: both;
+  	position: fixed;
 	}
 }
 
@@ -412,5 +421,15 @@ ul#entries li:last-child {
 		padding-bottom: 20px;
 	}
 
-
+	footer {
+		padding: 10px;
+		margin-top: 20px;
+		width: 99%;
+		color: #ffffff;
+		background-color: #4997D0; 
+		text-align: center;
+		bottom: 0;
+		clear: both;
+  	position: fixed;
+	}
 }
